<resources>
    <string name="app_name">AndroidTESTXGRID</string>
    <string name="upgrade_to_pro">Upgrade To PRO</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="john_doe">John Doe</string>
    <string name="privacy">Privacy</string>
    <string name="purchase_history">Purchase History</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="settings">Settings</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="logout">Logout</string>
</resources>