<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:background="@color/color_bg_day"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_userimage"
            android:layout_marginTop="@dimen/_24sdp"/>

        <ImageView
            android:id="@+id/iv_btn_dayNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_18ssp"
            android:padding="@dimen/_4ssp"
            android:src="@drawable/ic_night" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:layout_gravity="center"
        android:textColor="@color/text_color"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/latobold"
        android:textSize="@dimen/_24ssp"/>

    <TextView
        android:id="@+id/tv_userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe_example_com"
        android:layout_gravity="center"
        android:fontFamily="@font/latoregular"
        android:textColor="@color/text_color"
        android:layout_marginTop="@dimen/_8sdp"/>

    <RelativeLayout
        android:id="@+id/rl_btn_upgradeToPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_yellow"
        android:layout_marginTop="@dimen/_16sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/latobold"
            android:text="@string/upgrade_to_pro"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_18ssp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_btn_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_gravity="center"
        android:background="@drawable/bg_grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_24sdp"
            android:drawablePadding="@dimen/_18ssp"
            android:fontFamily="@font/latobold"
            android:text="@string/privacy"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_privacy" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_moveforward"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_28sdp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_btn_purchaseHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_gravity="center"
        android:background="@drawable/bg_grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_centerVertical="true"
            android:text="@string/purchase_history"
            android:drawablePadding="@dimen/_18ssp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/latobold"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_purchase" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_moveforward"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_28sdp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_btn_helpSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_gravity="center"
        android:background="@drawable/bg_grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_24sdp"
            android:drawablePadding="@dimen/_18ssp"
            android:fontFamily="@font/latobold"
            android:text="@string/help_support"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_helpsupport" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_moveforward"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_28sdp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_gravity="center"
        android:background="@drawable/bg_grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_24sdp"
            android:drawablePadding="@dimen/_18ssp"
            android:fontFamily="@font/latobold"
            android:text="@string/settings"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_settings" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@android:color/transparent"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_moveforward" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_btn_inviteFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_gravity="center"
        android:background="@drawable/bg_grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_24sdp"
            android:drawablePadding="@dimen/_18ssp"
            android:fontFamily="@font/latobold"
            android:text="@string/invite_a_friend"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_invitefriend" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_moveforward"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_28sdp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_gravity="center"
        android:background="@drawable/bg_black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/latobold"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

    </RelativeLayout>



</LinearLayout>